<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PracticalTest01Var03SecondaryActivity"
    android:orientation="vertical">


    <TextView
        android:id="@+id/result_field_2"
        android:hint="@string/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:saveEnabled="false"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        >
        <Button
            android:id="@+id/btnCorrect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/corect"
            android:gravity="center"
            android:layout_margin="5dp"/>
        <Button
            android:id="@+id/btnInccorect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/incorrect"
            android:gravity="center"
            android:layout_margin="5dp"
            />

    </LinearLayout>

</LinearLayout>